<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="act_name_camcorder">Camcorder</string>
    <string name="act_name_camera">Camera</string>
    <string name="action_licenses">Open source licenses</string>
    <string name="ai_scene_adjustment_bluesky">Blue Sky</string>
    <string name="ai_scene_adjustment_fireworks">Fireworks</string>
    <string name="ai_scene_adjustment_flower">Flower</string>
    <string name="ai_scene_adjustment_food">Food</string>
    <string name="ai_scene_adjustment_greenery">Greenery</string>
    <string name="ai_scene_adjustment_holiday_lights">Holiday lights</string>
    <string name="ai_scene_adjustment_macro">Macro</string>
    <string name="ai_scene_adjustment_moon">Moon</string>
    <string name="ai_scene_adjustment_motion">Motion</string>
    <string name="ai_scene_adjustment_sunset_sunrise">Sunrise/Sunset</string>
    <string name="ai_scene_adjustment_text">Text</string>
    <string name="ai_scene_suggestion_group_shot">Switch to Group Selfie</string>
    <string name="ai_scene_suggestion_macro">Switch to Macro</string>
    <string name="ai_scene_suggestion_night">Switch to Night Vision</string>
    <string name="ai_scene_suggestion_photo">Switch to Standard</string>
    <string name="ai_scene_suggestion_portrait">Switch to Portrait</string>
    <string name="ai_scene_suggestion_text">Scan text</string>
    <string name="ai_scene_suggestion_wide_zoom">Switch to Ultra-wide</string>
    <string name="ai_scene_toast_scene_off">SCENE OFF</string>
    <string name="ai_scene_toast_scene_on">SCENE ON</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Camera</string>
    <string name="app_total_capture_time">Shutter2addImage</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto_night_vision_triggered">Auto night vision is on</string>
    <string name="aware_action_cancel">Cancel</string>
    <string name="aware_action_clipboard">Copied to clipboard</string>
    <string name="aware_action_contact">Add to contacts</string>
    <string name="aware_action_copy">Copy</string>
    <string name="aware_action_dial">Call</string>
    <string name="aware_action_email">Send email</string>
    <string name="aware_action_event">Add event to calendar</string>
    <string name="aware_action_location">Map</string>
    <string name="aware_action_monopoly">Pay with Motorola Account</string>
    <string name="aware_action_motordp">Connect to Ready For</string>
    <string name="aware_action_save">Save</string>
    <string name="aware_action_search">Search</string>
    <string name="aware_action_share">Share</string>
    <string name="aware_action_sms">Send message</string>
    <string name="aware_action_web">View website</string>
    <string name="aware_action_wifi">Connect to network</string>
    <string name="aware_copy_contact_address">Address</string>
    <string name="aware_copy_contact_birthday">Birthday</string>
    <string name="aware_copy_contact_company">Company</string>
    <string name="aware_copy_contact_im">IM</string>
    <string name="aware_copy_contact_name">Name</string>
    <string name="aware_copy_contact_nickname">Nickname</string>
    <string name="aware_copy_contact_note">Note</string>
    <string name="aware_copy_contact_pronunciation">Pronunciation</string>
    <string name="aware_copy_contact_title">Title</string>
    <string name="aware_copy_contact_url">URL</string>
    <string name="aware_copy_delim_key_value">": "</string>
    <string name="aware_copy_delim_list">", "</string>
    <string name="aware_copy_email">Email</string>
    <string name="aware_copy_event_all_day">" (all day)"</string>
    <string name="aware_copy_event_attendees">Attendees</string>
    <string name="aware_copy_event_description">Description</string>
    <string name="aware_copy_event_end">End</string>
    <string name="aware_copy_event_location">Location</string>
    <string name="aware_copy_event_organizer">Organizer</string>
    <string name="aware_copy_event_start">Start</string>
    <string name="aware_copy_event_summary">Summary</string>
    <string name="aware_copy_gps">GPS</string>
    <string name="aware_copy_msg_body">Body</string>
    <string name="aware_copy_msg_subject">Subject</string>
    <string name="aware_copy_number">Number</string>
    <string name="aware_copy_type">" (%1$s)"</string>
    <string name="aware_copy_wifi_hidden">Hidden</string>
    <string name="aware_copy_wifi_hidden_no">no</string>
    <string name="aware_copy_wifi_hidden_yes">yes</string>
    <string name="aware_copy_wifi_password">Password</string>
    <string name="aware_copy_wifi_security">Security type</string>
    <string name="aware_copy_wifi_ssid">SSID</string>
    <string name="aware_info_contact">Contact</string>
    <string name="aware_info_event">Event</string>
    <string name="aware_info_geo">Location</string>
    <string name="aware_info_message">Message</string>
    <string name="aware_info_product">Product</string>
    <string name="aware_info_text">Text</string>
    <string name="aware_info_url">URL</string>
    <string name="aware_info_wifi">Wi-Fi</string>
    <string name="aware_wifi_connected">Connected to network \"%1$s\"</string>
    <string name="aware_wifi_connecting">Connecting to network \"%1$s\"</string>
    <string name="aware_wifi_connecting_allow_camera">Grant permission by tapping \"Yes\" on the Wi-Fi notification</string>
    <string name="aware_wifi_connecting_error">Problem connecting to network \"%1$s\"</string>
    <string name="aware_wifi_connecting_error_password">Unable to connect to Wi-Fi using the QR code provided. Please connect via Network settings.</string>
    <string name="back">Back</string>
    <string name="battery_level">Battery Level</string>
    <string name="battery_temp">Battery Temp</string>
    <string name="best_shot_desc">"Here's the best shot you captured of this moment"</string>
    <string name="best_shot_name">Best shot</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="camera_info_app_version">Camera APK: %1$s</string>
    <string name="camera_info_qcom_tag">QCOM tag: %1$s</string>
    <string name="camera_number_msg">The camera number should be equal, please check json or hw config</string>
    <string name="camera_startup_report">Startup (Preview)</string>
    <string name="camera_startup_to_focus_lock_report">Startup (Focus Lock)</string>
    <string name="camera_switch_report">Switch</string>
    <string name="cancel">Cancel</string>
    <string name="caption_wraps_to_more_than_a_line">Caption wraps to more than a line.</string>
    <string name="capture_cancel">Capture canceled.</string>
    <string name="capture_failure">Capture failed. Try again.</string>
    <string name="cardview_description">Cards are surfaces that display content and actions on a single topic.They should be easy to scan for relevant and actionable information.</string>
    <string name="category">Category</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="cinemagraph_battery_saver_toast">Cinemagraph is unavailable when battery saver mode is on</string>
    <string name="cinemagraph_bounce_loop">Bounce loop</string>
    <string name="cinemagraph_clear_mask">CLEAR</string>
    <string name="cinemagraph_exit_dialog_summary">Your recording won’t be saved. Are you sure you want to go back?</string>
    <string name="cinemagraph_failure">"Cinemagraph couldn't open"</string>
    <string name="cinemagraph_format_gif">GIF</string>
    <string name="cinemagraph_format_mp4">MP4</string>
    <string name="cinemagraph_loading">Loading…</string>
    <string name="cinemagraph_preview">PREVIEW</string>
    <string name="cinemagraph_regular_loop">Regular loop</string>
    <string name="cinemagraph_save_as">Save as</string>
    <string name="cinemagraph_shutter_tip">Tap and hold to record</string>
    <string name="cinemagraph_tip">Hold the camera still for best results</string>
    <string name="cinemagraph_title">Cinemagraph</string>
    <string name="clear_db">CLEAR</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="cli_display_button">CLI</string>
    <string name="cli_perm_required_alert_msg">Camera needs permission to access some things on your device. Open Camera on the internal display to grant permissions.</string>
    <string name="cold">Cold</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="cpu_frequency">Freq (Cur/Max, MHz)</string>
    <string name="cpu_name">Name</string>
    <string name="cpu_status">Status</string>
    <string name="cta_grant">Grant permission</string>
    <string name="cta_leave">Leave</string>
    <string name="cta_message_content">"Access location
Open camera
Record audio
Read &amp; write storage
Access internet"</string>
    <string name="cta_message_title">Camera requires the following permissions:</string>
    <string name="curr_drain">CD (mA)</string>
    <string name="dialog_menu_setting">Settings</string>
    <string name="media_server">Media Server Usage</string>
    <string name="mot_camera">Mot Cam Usage</string>
    <string name="qcd">QCam Dmon Usage</string>
    <string name="talkback_feedback">Share feedback</string>
    <string name="talkback_help">Help</string>
    <string name="talkback_tip">Learn more</string>
    <string name="time_intervel">Time Int (10 sec)</string>
</resources>