<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:textSize="13.0sp" android:gravity="center" android:id="@id/video_report_clear_btn" android:background="@drawable/btn_holo_selector" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_marginLeft="15.0dip" android:layout_marginTop="4.0dip" android:text="@string/clear_db" android:layout_alignParentLeft="true" />
    <Switch android:id="@id/video_report_switch_btn" android:paddingRight="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:checked="false" android:layout_alignParentRight="true" />
    <LinearLayout android:orientation="horizontal" android:id="@id/linearHeader" android:padding="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="false" android:weightSum="7.0" android:layout_below="@id/video_report_clear_btn">
        <TextView android:textStyle="bold" android:textColor="@color/normal_list_item_color" android:gravity="center" android:padding="2.0dip" android:layout_width="0.0px" android:layout_height="wrap_content" android:text="@string/time_intervel" android:layout_weight="1.0" android:textAlignment="gravity" />
        <TextView android:textStyle="bold" android:textColor="@color/settings_list_inverse_main_color" android:gravity="center" android:padding="2.0dip" android:layout_width="0.0px" android:layout_height="wrap_content" android:text="@string/curr_drain" android:layout_weight="1.0" android:textAlignment="gravity" />
        <TextView android:textStyle="bold" android:textColor="@color/settings_list_inverse_main_color" android:gravity="center" android:padding="2.0dip" android:layout_width="0.0px" android:layout_height="wrap_content" android:text="@string/battery_temp" android:layout_weight="1.0" android:textAlignment="gravity" />
        <TextView android:textStyle="bold" android:textColor="@color/settings_list_inverse_main_color" android:gravity="center" android:padding="2.0dip" android:layout_width="0.0px" android:layout_height="wrap_content" android:text="@string/battery_level" android:layout_weight="1.0" android:textAlignment="gravity" />
        <TextView android:textStyle="bold" android:textColor="@color/settings_list_inverse_main_color" android:gravity="center" android:padding="2.0dip" android:layout_width="0.0px" android:layout_height="wrap_content" android:text="@string/media_server" android:layout_weight="1.0" android:textAlignment="gravity" />
        <TextView android:textStyle="bold" android:textColor="@color/settings_list_inverse_main_color" android:gravity="center" android:padding="2.0dip" android:layout_width="0.0px" android:layout_height="wrap_content" android:text="@string/qcd" android:layout_weight="1.0" android:textAlignment="gravity" />
        <TextView android:textStyle="bold" android:textColor="@color/settings_list_inverse_main_color" android:gravity="center" android:padding="2.0dip" android:layout_width="0.0px" android:layout_height="wrap_content" android:text="@string/mot_camera" android:layout_weight="1.0" android:textAlignment="gravity" />
    </LinearLayout>
    <ExpandableListView android:id="@id/videoReportEV" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="4.0dip" android:layout_below="@id/linearHeader" />
</RelativeLayout>