<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:padding="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="false"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textStyle="bold" android:textColor="@color/settings_list_inverse_main_color" android:gravity="center" android:padding="2.0dip" android:layout_width="0.0px" android:layout_height="wrap_content" android:text="@string/cpu_name" android:layout_weight="1.0" android:textAlignment="gravity" />
    <TextView android:textStyle="bold" android:textColor="@color/settings_list_inverse_main_color" android:gravity="center" android:padding="2.0dip" android:layout_width="0.0px" android:layout_height="wrap_content" android:text="@string/cpu_status" android:layout_weight="1.0" android:textAlignment="gravity" />
    <TextView android:textStyle="bold" android:textColor="@color/settings_list_inverse_main_color" android:gravity="center" android:padding="2.0dip" android:layout_width="0.0px" android:layout_height="wrap_content" android:text="@string/cpu_frequency" android:layout_weight="2.0" android:textAlignment="gravity" />
</LinearLayout>