<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/indicator_bar" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="104.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/indicator_bar_bottom_guideline" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_begin="80.0dip" />
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/indicator_bar_scene_ai_pill" android:background="@drawable/scene_detect_pill_bg" android:padding="@dimen/indicator_bar_margin_small" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="@dimen/indicator_bar_height" android:minWidth="@dimen/indicator_bar_height" android:animateLayoutChanges="true" android:backgroundTint="@color/overlay_surface_medium" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/indicator_bar_bottom_guideline">
        <ImageView android:id="@id/indicator_bar_scene_ai_icon" android:layout_width="@dimen/indicator_bar_scene_icon_size" android:layout_height="@dimen/indicator_bar_scene_icon_size" android:src="@drawable/scene_detect_on" android:tint="@color/white" android:alpha="@dimen/icon_inactive" android:layout_marginStart="@dimen/indicator_bar_scene_pill_margin_start" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/indicator_bar_scene_ai_txt" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_goneMarginEnd="@dimen/indicator_bar_scene_pill_margin_start" />
        <TextView android:id="@id/indicator_bar_scene_ai_txt" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="@dimen/indicator_bar_margin_small" android:layout_marginEnd="@dimen/indicator_bar_scene_pill_margin_end" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/indicator_bar_scene_ai_icon" app:layout_constraintTop_toTopOf="parent" style="@style/Subtitle3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageButton android:id="@id/indicator_bar_help_button" android:visibility="gone" android:src="@drawable/ic_help" android:scaleType="centerInside" android:adjustViewBounds="false" android:contentDescription="@string/talkback_help" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/Small.OverlayWhite" />
    <ImageButton android:id="@id/indicator_bar_feedback_button" android:visibility="gone" android:src="@drawable/ic_feedback" android:scaleType="centerInside" android:adjustViewBounds="false" android:contentDescription="@string/talkback_feedback" app:layout_constraintStart_toEndOf="@id/indicator_bar_help_button" app:layout_constraintTop_toTopOf="parent" style="@style/Small.OverlayWhite" />
    <ViewStub android:id="@id/indicator_bar_video_recording_stub" android:layout="@layout/indicator_bar_video_recording" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginStart="10.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/indicator_bar_bottom_guideline" />
    <androidx.constraintlayout.helper.widget.Flow android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginHorizontal="16.0dip" app:constraint_referenced_ids="indicator_bar_gesture_icon, indicator_bar_smile_icon,         indicator_bar_audio_zoom_icon, indicator_bar_hdr10_icon,         indicator_bar_eyeglasses_reflection_icon" app:flow_horizontalBias="1.0" app:flow_horizontalGap="@dimen/indicator_bar_margin_small" app:flow_horizontalStyle="packed" app:flow_wrapMode="none" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/indicator_bar_bottom_guideline" />
    <ImageView android:id="@id/indicator_bar_audio_zoom_icon" android:background="@android:color/transparent" android:visibility="gone" android:layout_width="@dimen/indicator_bar_icon_size" android:layout_height="@dimen/indicator_bar_icon_size" android:src="@drawable/audio_zoom" android:scaleType="centerInside" android:alpha="@dimen/icon_inactive" android:elevation="@dimen/control_panel_elevation_todo" />
    <ImageView android:id="@id/indicator_bar_hdr10_icon" android:background="@android:color/transparent" android:visibility="gone" android:layout_width="@dimen/indicator_bar_icon_size" android:layout_height="@dimen/indicator_bar_icon_size" android:src="@drawable/ic_hdr10" android:scaleType="centerInside" android:alpha="@dimen/icon_inactive" android:elevation="@dimen/control_panel_elevation_todo" />
    <ImageView android:id="@id/indicator_bar_eyeglasses_reflection_icon" android:background="@android:color/transparent" android:visibility="gone" android:layout_width="@dimen/indicator_bar_icon_size" android:layout_height="@dimen/indicator_bar_icon_size" android:src="@drawable/ic_eyeglasses_reflection" android:scaleType="centerInside" android:alpha="@dimen/icon_inactive" android:layout_marginEnd="@dimen/indicator_bar_margin_small" android:elevation="@dimen/control_panel_elevation_todo" />
    <ImageView android:id="@id/indicator_bar_smile_icon" android:background="@android:color/transparent" android:visibility="gone" android:layout_width="@dimen/indicator_bar_icon_size" android:layout_height="@dimen/indicator_bar_icon_size" android:src="@drawable/auto_smile_capture" android:scaleType="centerInside" android:alpha="@dimen/icon_inactive" android:elevation="@dimen/control_panel_elevation_todo" />
    <ImageView android:id="@id/indicator_bar_gesture_icon" android:background="@android:color/transparent" android:visibility="gone" android:layout_width="@dimen/indicator_bar_icon_size" android:layout_height="@dimen/indicator_bar_icon_size" android:src="@drawable/ic_gesture_capture_on" android:scaleType="centerInside" android:alpha="@dimen/icon_inactive" android:elevation="@dimen/control_panel_elevation_todo" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/indicator_bar_info_btn" app:layout_constraintTop_toTopOf="parent" />
    <ImageButton android:id="@id/indicator_bar_info_btn" android:visibility="gone" android:src="@drawable/info" android:scaleType="centerInside" android:adjustViewBounds="false" android:contentDescription="@string/talkback_tip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/indicator_bar_bottom_guideline" style="@style/Small.OverlayWhite" />
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/indicator_bar_setting_button_guideline" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_end="0.0dip" />
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/indicator_bar_setting_button" android:background="@drawable/medium_pill_bg" android:padding="@dimen/indicator_bar_margin_small" android:layout_width="wrap_content" android:layout_height="@dimen/indicator_bar_height" android:minWidth="@dimen/indicator_bar_height" android:animateLayoutChanges="true" android:layout_marginStart="@dimen/indicator_bar_margin_tiny" android:backgroundTint="@color/overlay_surface_medium" app:layout_constraintEnd_toStartOf="@id/indicator_bar_setting_button_guideline" app:layout_constraintTop_toTopOf="parent">
        <ImageView android:id="@id/indicator_bar_setting_button_icon" android:layout_width="@dimen/medium_pill_icon_size" android:layout_height="@dimen/medium_pill_icon_size" android:src="@drawable/settings_gear" android:tint="@color/white" android:layout_marginStart="@dimen/medium_pill_margin_start" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/indicator_bar_setting_button_text" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_goneMarginEnd="@dimen/medium_pill_margin_start" />
        <TextView android:id="@id/indicator_bar_setting_button_text" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dialog_menu_setting" android:layout_marginStart="@dimen/indicator_bar_margin_small" android:layout_marginEnd="@dimen/medium_pill_margin_end" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/indicator_bar_setting_button_icon" app:layout_constraintTop_toTopOf="parent" style="@style/Subtitle3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>